--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,14 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV['tuchikko'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['rds-mysql-server.copugcsecmtj.ap-northeast-1.rds.amazonaws.com'] %>
+  username: <%= ENV['suuuchan'] %>
+  password: <%= ENV['ayane_0223'] %>
